--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   id="home-page"
   class="relative h-screen bg-[url(assets/images/background.png)] bg-cover bg-center bg-no-repeat snap-start text-white"
 >
-  <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
+  <div class="absolute inset-0 bg-black/30 backdrop-blur-3xl"></div>
 
   <div class="relative z-10 flex flex-col items-center justify-center h-full">
-    <h1 class="text-4xl font-bold mb-4">Welcome <span id="welcome-user">[User]</span></h1>
-    <p class="text-center max-w-md">Kaca buram vibes 🍷✨</p>
+<h1 class="text-4xl font-bold mb-4">Halo <span id="welcome-user">[User]</span>.</h1>
+    <p class="text-center max-w-md">Nama saya Febrian Eka Putra, saat ini saya sedang belajar menjadi Fullstack Web Developer.</p>
   </div>
 </section>
 
@@ -67,8 +67,43 @@
   <a href="https://x.com/penantanghilang">X</a>
 </footer>
 
+<div id="nameModal" class="fixed inset-0 bg-black bg-opacity-60 backdrop-blur-sm flex items-center justify-center z-50">
+  <div class="bg-white rounded-lg p-6 shadow-xl w-[90%] max-w-md text-center">
+    <h2 class="text-2xl font-semibold mb-4">Halo, sebelum masuk kenalin dong nama kamu siapa?</h2>
+    <input
+      type="text"
+      id="modal-name-input"
+      placeholder="Masukan nama kamu"
+      class="border w-full p-2 rounded mb-4"
+    />
+    <button
+      onclick="submitName()"
+      class="bg-stone-950 text-white px-4 py-2 rounded hover:bg-stone-800"
+    >
+      Masuk
+    </button>
+  </div>
+</div>
+
 
   <!-- JS -->
   <script src="js/script.js"></script>
+  <script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        keyframes: {
+          'fade-down': {
+            '0%': { opacity: '0', transform: 'translateY(-40px)' },
+            '100%': { opacity: '1', transform: 'translateY(0)' },
+          }
+        },
+        animation: {
+          'fade-down': 'fade-down 1s ease-out forwards'
+        }
+      }
+    }
+  }
+</script>
 </body>
 </html>
