edit warna comment section

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
   <h2 class="text-3xl font-semibold mb-4">Berikan saya pesan</h2>
 
   <div class="flex flex-col md:flex-row items-start gap-8">
-    
+
     <form id="message-form" class="flex flex-col w-full max-w-md">
-      <label for="message-input" class="mb-2">Message:</label>
+      <label for="message-input" class="mb-2">Pesannya:</label>
       <textarea id="message-input" name="message" rows="4" class="border rounded p-2 mb-4 w-full"></textarea>
-      <button type="button" onclick="submitMessage()" class="bg-stone-100 text-stone-950 px-4 py-2 rounded-full hover:bg-stone-400">Send Message</button>
+      <button type="button" onclick="submitMessage()" class="bg-stone-900 text-white px-4 py-2 rounded-full hover:bg-stone-400">Kirim pesan</button>
     </form>
 
     <div id="message-output" class="w-full max-w-md bg-white border rounded-lg p-4 max-h-80 overflow-y-auto"></div>
