nambahin icon turn off untuk keluar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
   </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body class="bg-white text-gray-800" style="font-family: 'Montserrat', sans-serif;">
@@ -27,7 +28,7 @@
     <a href="#home-page" class="px-4 py-2 rounded hover:bg-stone-600">Beranda</a>
     <a href="#about" class="px-4 py-2 rounded hover:bg-stone-600">Tentang Saya</a>
     <a href="#contact-me" class="px-4 py-2 rounded hover:bg-stone-600">Hubungi Saya</a>
-    <button onclick="logout()" class="px-4 py-2 rounded hover:bg-red-600 bg-red-500">Keluar</button>
+    <button onclick="logout()" class="px-4 py-2 rounded hover:bg-red-600 bg-red-500"><i class="fa-solid fa-power-off"></i></button>
   </nav>
 </header>
 
@@ -60,7 +61,7 @@
           <h2 class="text-3xl font-semibold mb-4">Tentang Febrian Eka Putra</h2>
           <p class="text-gray-700">
             Salam kenal <span id="about-user">[User]</span>!
-           panggil saja saya ebi. saya memiliki minat besar di dunia pengembangan perangkat lunak, khususnya pada
+           panggil saja saya ebi (hello-ebi). saya memiliki minat besar di dunia pengembangan perangkat lunak, khususnya pada
             pengembangan web fullstack.<br><br>
 
             Saya tengah fokus memperdalam keterampilan di bidang Frontend dan Backend Development, dengan tujuan menjadi
