--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portofolio ebi</title>
-  <link rel="stylesheet" href="css/styles.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
@@ -54,7 +53,7 @@
     <section id="about" class="h-screen flex items-center justify-center bg-stone-200 snap-start px-4">
       <div class="flex flex-row items-center gap-8 max-w-5xl w-full mx-auto">
 
-        <img src="/assets/images/ebi.gif" alt="ebi gif"
+        <img src="assets/images/ebi.gif" alt="ebi gif"
           class="w-80 h-80 rounded-tr-3xl rounded-bl-3xl object-cover object-top shadow-[0_20px_50px_rgba(0,0,0,0.7)]" />
 
         <div class="text-left flex flex-col">
